Updating Blake2.cs: blake2B.Clear, .Core and .Final

--- a/Blake2.cs.mono.csproj
+++ b/Blake2.cs.mono.csproj
@@ -17,6 +17,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <ConsolePause>false</ConsolePause>
+    <Commandlineparameters>--in=./Hallo.txt -- Hash512</Commandlineparameters>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>full</DebugType>
