--- a/Blake2B.cs.vs.csproj
+++ b/Blake2B.cs.vs.csproj
@@ -6,7 +6,7 @@
     <ProjectGuid>{8029A6D1-396A-4CD2-8666-9CB61B4D38E1}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <RootNamespace>Blake2</RootNamespace>
-    <AssemblyName>Blake2</AssemblyName>
+    <AssemblyName>Blake2B</AssemblyName>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -17,7 +17,6 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <ConsolePause>false</ConsolePause>
-    <Commandlineparameters>--in=./Hallo.txt -- Hash512</Commandlineparameters>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>full</DebugType>
