Updating Blake2B: Introducing Blake2S

--- a/Blake2B.cs.mono.csproj
+++ b/Blake2B.cs.mono.csproj
@@ -38,5 +38,10 @@
     <Compile Include="Blake2B-Inline.cs" />
     <Compile Include="Blake2B-Simple.cs" />
     <Compile Include="Program.cs" />
+    <Compile Include="Blake2S.cs" />
+    <Compile Include="Blake2S-FullyUnrolled.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="README.md" />
   </ItemGroup>
 </Project>
